--- a/apple-clone-v10/css2/main.css
+++ b/apple-clone-v10/css2/main.css
@@ -16,10 +16,19 @@ p {
     line-height: 1.6;
 }
 
+a {
+    color: rgb(29,29,31);
+    text-decoration: none;
+}
+
 .global-nav {
     height: 44px;
 }
 
+.local-nav {
+    height: 52px;
+    border-bottom: 1px solid #ddd;
+}
 
 .global-nav-links , 
 .local-nav-links {
@@ -32,4 +41,18 @@ p {
 
 .global-nav-links {
     justify-content: space-between;
+}
+
+.product-name {
+    margin-right: auto;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.local-nav-links a:not(.product-name){
+    margin-left: 2em;
+}
+
+.local-nav-links a:not(.product-name) {
+    font-size: 0.8rem;
 }
