--- a/apple-clone-v10/css2/main.css
+++ b/apple-clone-v10/css2/main.css
@@ -23,11 +23,13 @@ a {
 
 .global-nav {
     height: 44px;
+    padding: 0 1rem;
 }
 
 .local-nav {
     height: 52px;
     border-bottom: 1px solid #ddd;
+    padding: 0 1rem;
 }
 
 .global-nav-links , 
@@ -55,4 +57,41 @@ a {
 
 .local-nav-links a:not(.product-name) {
     font-size: 0.8rem;
+}
+
+.scroll-section {
+    padding-top: 50vh;
+}
+
+#scroll-section-0 h1 {
+    font-size: 4rem;
+    text-align: center;
+}
+
+
+.main-message {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 3em;
+    font-size: 2.5rem;
+}
+
+
+.main-message p {
+    font-weight: bold;
+    text-align: center;
+    line-height: 1.2;
+}
+
+.description {
+    font-size: 1.2rem;
+    color: #888;
+}
+
+.description strong {
+    margin-right: 0.2em;
+    float: left;
+    font-size: 3rem;
+    color: black;
 }
