페이지 내용 CSS 작성 2

--- a/apple-clone-v10/css2/main.css
+++ b/apple-clone-v10/css2/main.css
@@ -84,7 +84,43 @@ a {
     line-height: 1.2;
 }
 
+.main-message small {
+    display: block;
+    margin-bottom: 0.5em;
+    font-size: 1.2rem;
+}
+
+#scroll-section-2 .main-message {
+    font-size: 3.5rem;
+}
+
+.desc-message {
+    width: 50%;
+    font-weight: bold;
+}
+
+.pin {
+    width: 1px;
+    height: 100px;
+    background: rgb(29, 29, 31);
+}
+
+.mid-message {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0 1rem;
+    font-size: 2rem;
+    color: #888;
+}
+
+.mid-message strong {
+    color: rgb(29, 29, 31);
+}
+
 .description {
+    margin: 0 auto;
+    max-width: 1000px;
+    padding: 0 1rem;
     font-size: 1.2rem;
     color: #888;
 }
@@ -94,4 +130,51 @@ a {
     float: left;
     font-size: 3rem;
     color: black;
+}
+
+.canvas-caption {
+    max-width: 1000px;
+    margin: 0 auto;
+    font-size: 1.2rem;
+    color: #888;
+    padding: 0 1rem;
+}
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 7rem;
+    color: white;
+    background-color: darkorange;
+}
+
+@media (min-width: 1024px){
+    #scroll-section-0 h1 {
+        font-size: 9vw;
+    }
+    .main-message {
+        font-size: 4vw;
+    }
+    .description {
+        font-size: 2rem;
+    }
+    .description strong{
+        font-size: 6rem;
+    }
+    #scroll-section-2 .main-message small{
+        font-size: 1.5vw;
+    }
+    #scroll-section-2 .main-message {
+        font-size: 6vw;
+    }
+    .desc-message {
+        width: 20%;
+    }
+    .mid-message {
+        font-size: 4vw;
+    }
+    .canvas-caption {
+        font-size: 2rem;
+    }
 }
