--- a/apple-clone-v10/css2/main.css
+++ b/apple-clone-v10/css2/main.css
@@ -24,9 +24,17 @@ a {
 .global-nav {
     height: 44px;
     padding: 0 1rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
 
 .local-nav {
+    position: absolute;
+    top: 45px;
+    left: 0;
+    width: 100%;
     height: 52px;
     border-bottom: 1px solid #ddd;
     padding: 0 1rem;
@@ -61,6 +69,7 @@ a {
 
 .scroll-section {
     padding-top: 50vh;
+    border: 3px solid black;
 }
 
 #scroll-section-0 h1 {
